// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/AtMention should match snapshot when mentioning a group followed by punctuation 1`] = `
<Fragment>
  <span>
    <Overlay
      animation={[Function]}
      onHide={[Function]}
      placement="right"
      rootClose={false}
      show={false}
    >
      <Connect(Component)
        group={
          Object {
            "allow_reference": true,
            "create_at": 1,
            "delete_at": 0,
            "description": "",
            "display_name": "group_display_name",
            "has_syncables": false,
            "id": "qwerty1",
            "member_count": 0,
            "name": "developers",
            "remote_id": "",
            "scheme_admin": false,
            "source": "",
            "update_at": 1,
          }
        }
        hide={[Function]}
        returnFocus={[Function]}
      />
    </Overlay>
    <a
      aria-haspopup="dialog"
      className="group-mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @developers
    </a>
  </span>
  .
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is allowed reference 1`] = `
<Fragment>
  <span>
    <Overlay
      animation={[Function]}
      onHide={[Function]}
      placement="right"
      rootClose={false}
      show={false}
    >
      <Connect(Component)
        group={
          Object {
            "allow_reference": true,
            "create_at": 1,
            "delete_at": 0,
            "description": "",
            "display_name": "group_display_name",
            "has_syncables": false,
            "id": "qwerty1",
            "member_count": 0,
            "name": "developers",
            "remote_id": "",
            "scheme_admin": false,
            "source": "",
            "update_at": 1,
          }
        }
        hide={[Function]}
        returnFocus={[Function]}
      />
    </Overlay>
    <a
      aria-haspopup="dialog"
      className="group-mention-link"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      @developers
    </a>
  </span>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is allowed reference with group highlight disabled 1`] = `
<Fragment>
  (at)-developers
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning a group that is not allowed reference 1`] = `
<Fragment>
  (at)-marketing
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning all 1`] = `
<Fragment>
  (at)-all
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning all with mixed case 1`] = `
<Fragment>
  (at)-aLL
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning current user 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc1/image"
    triggerComponentClass="mention--highlight"
    userId="abc1"
  >
    <a
      className="mention-link"
      role="button"
      tabIndex={0}
    >
      @First Last
    </a>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc2/image"
    triggerComponentClass=""
    userId="abc2"
  >
    <a
      className="mention-link"
      role="button"
      tabIndex={0}
    >
      @Nick
    </a>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user containing and followed by punctuation 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc3/image"
    triggerComponentClass=""
    userId="abc3"
  >
    <a
      className="mention-link"
      role="button"
      tabIndex={0}
    >
      @Dot Matrix
    </a>
  </ProfilePopoverController>
  .
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user containing punctuation 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc3/image"
    triggerComponentClass=""
    userId="abc3"
  >
    <a
      className="mention-link"
      role="button"
      tabIndex={0}
    >
      @Dot Matrix
    </a>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user followed by punctuation 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc2/image"
    triggerComponentClass=""
    userId="abc2"
  >
    <a
      className="mention-link"
      role="button"
      tabIndex={0}
    >
      @Nick
    </a>
  </ProfilePopoverController>
  ...
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user with different teammate name display setting 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc2/image"
    triggerComponentClass=""
    userId="abc2"
  >
    <a
      className="mention-link"
      role="button"
      tabIndex={0}
    >
      @user1
    </a>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when mentioning user with mixed case 1`] = `
<Fragment>
  <ProfilePopoverController
    returnFocus={[Function]}
    src="/api/v4/users/abc2/image"
    triggerComponentClass=""
    userId="abc2"
  >
    <a
      className="mention-link"
      role="button"
      tabIndex={0}
    >
      @Nick
    </a>
  </ProfilePopoverController>
</Fragment>
`;

exports[`components/AtMention should match snapshot when not mentioning a user 1`] = `
<Fragment>
  (at)-notauser
</Fragment>
`;

exports[`components/AtMention should match snapshot when not mentioning a user with mixed case 1`] = `
<Fragment>
  (at)-NOTAuser
</Fragment>
`;
